# cpp-html-parser

./: .gitignore  CMakeLists.txt  CTestTestfile.cmake  README.md  TODO.md  examples.sh  test.sh
.github/workflows/: c-cpp_check.yml  cmake-test.yml  codacy.yml  codeql.yml
examples/: CMakeLists.txt  parsing.cc
include/HTMLParser/: HTMLDOM.h  HTMLDocument.h  HTMLElement.h  HTMLParser.h  HTMLTokenizer.h  HTMLTokens.h
source/: HTMLElement.cc  HTMLParser.cc  HTMLTokenizer.cc  HTMLTokens.cc
tests/: CMakeLists.txt  main.cc  runUnitTests  test_attrs.cc  test_autoclosing_elements.cc  test_basics.cc  test_demo.cc  test_text.cc  test_tokenizer.cc
tests/internal/: main.cc
